@@ -7,10 +7,13 @@ plugins {
     id 'org.owasp.dependencycheck' version '6.2.2'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'org.sonarqube' version '3.3'
-    id 'uk.gov.hmcts.java' version '0.12.2'
+    id 'uk.gov.hmcts.java' version '0.12.27'
     id 'io.freefair.lombok' version '5.3.0'
     id 'org.flywaydb.flyway' version '8.2.2'
+    id "info.solidsoft.pitest" version '1.7.4'
 }
+
+apply plugin: "info.solidsoft.pitest"
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -57,6 +60,7 @@ test {
     failFast = true
 }
 
+
 task functional(type: Test) {
     description = "Runs functional tests"
     group = "Verification"
@@ -72,6 +76,22 @@ task integration(type: Test) {
     failFast = true
     mustRunAfter test
 }
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
+}
+
+task checkoutDataStoreMigrationScripts (type: Exec){
+   executable "src/integrationTest/resources/scripts/checkout-datastore-db-scripts.sh"
+   outputs.upToDateWhen { false }
+}
+
+//**** Uncomment this line to checkout latest data-store-api migration scripts *****
+//integration.dependsOn(checkoutDataStoreMigrationScripts)
 
 check.dependsOn integration
 
@@ -102,7 +122,8 @@ sonarqube {
         property "sonar.projectKey", "uk.gov.hmcts.reform:ccd-case-disposer"
         property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
         property "sonar.coverage.exclusions", "**/ccd/ApplicationBootstrap.java"
-        property "sonar.exclusions", "**/parameter/*.java,**/config/*.java,**/dao/*.java,**/util/DefaultSnooper.java"
+        property "sonar.pitest.mode", "reuseReport"
+        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     }
 }
 
@@ -142,6 +163,9 @@ dependencyManagement {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
         }
+        dependencySet(group: 'org.yaml', version: '1.32') {
+            entry 'snakeyaml'
+        }
     }
 }
 
@@ -153,18 +177,55 @@ repositories {
     }
 }
 
+pitest {
+    pitestVersion.set('1.7.4')
+    junit5PluginVersion.set('0.15')
+    targetClasses = ['uk.gov.hmcts.reform.*']
+    excludedClasses = [
+            'uk.gov.hmcts.reform.ccd.madeup.*'
+    ]
+    threads = 10
+    enableDefaultIncrementalAnalysis = true
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
+    mutationThreshold = 50
+    timeoutConstInMillis = 30000
+    mutators.set([
+            'CONDITIONALS_BOUNDARY',
+            'INCREMENTS',
+            'INVERT_NEGS',
+            'MATH',
+            'NEGATE_CONDITIONALS',
+            'VOID_METHOD_CALLS',
+            'EMPTY_RETURNS',
+            'FALSE_RETURNS',
+            'NULL_RETURNS',
+            'PRIMITIVE_RETURNS',
+            'TRUE_RETURNS',
+            'REMOVE_CONDITIONALS'
+    ])
+}
+
+project.tasks['pitest'].group = "Verification"
+
 def versions = [
-        junit         : '5.7.2',
-        junitPlatform : '1.7.2',
-        reformLogging : '5.1.9',
-        elasticsearch : '7.17.1',
-        testcontainers: '1.16.0',
-        restAssured   : '4.4.0',
-        idamClient    : '2.0.1',
-        s2sClient     : '4.0.3',
-        commonsIo     : '2.7',
-        wiremock      : '2.21.0',
-        springBoot    : springBoot.class.package.implementationVersion
+     junit               : '5.7.2',
+     junitPlatform       : '1.7.2',
+     reformLogging       : '5.1.9',
+     elasticsearch       : '7.17.1',
+     testcontainers      : '1.16.0',
+     restAssured         : '4.4.0',
+     idamClient          : '2.0.1',
+     s2sClient           : '4.0.3',
+     commonsIo           : '2.7',
+     wiremock            : '2.21.0',
+     lombok              : '1.18.20',
+     gradlePitest        : '1.6.0',
+     pitest              : '1.6.3',
+     sonarPitest         : '0.5',
+     springFramework     : '5.3.20',
+     springBoot          : springBoot.class.package.implementationVersion,
+     jackson             : '2.14.0-rc1'
 ]
 
 ext.libraries = [
@@ -179,17 +240,17 @@ ext.libraries = [
 
 ext['spring-framework.version'] = '5.3.20'
 ext['log4j2.version'] = '2.17.1'
-ext['jackson.version'] = '2.13.2'
+ext['jackson.version'] = '2.14.0-rc1'
 
 dependencies {
-    compile "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.2'
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.13.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: versions.jackson
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: versions.jackson
 
     implementation group: 'commons-io', name: 'commons-io', version: versions.commonsIo
     implementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
 
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.2'
+    implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
 
     implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.25.1'
     implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
@@ -209,6 +270,7 @@ dependencies {
     configurations {
         compile.exclude module: 'spring-boot-starter-logging'
     }
+    compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.5.7'
 
     implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
     implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
@@ -218,10 +280,11 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
 
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.7.Final'
-    runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+    runtime group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
 
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+    implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
     implementation group: 'org.elasticsearch', name: 'elasticsearch', version: versions.elasticsearch
     implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: versions.elasticsearch
@@ -237,8 +300,14 @@ dependencies {
     testImplementation group: 'org.testcontainers', name: 'elasticsearch', version: versions.testcontainers
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: versions.wiremock
+    testCompile group: 'org.flywaydb', name: 'flyway-core', version: '8.2.2'
 
     testImplementation group: 'com.pivovarit', name: 'throwing-function', version: '1.5.1'
+
+    testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
+    testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
+    testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+    testCompile 'com.github.hmcts:fortify-client:1.3.0:all'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
